# beveridge-curve-dashboard

./: README.md  pyproject.toml
local/: dev.py
src/beveridge_curve/: __init__.py  app.py  charts_creator.py  data_loader.py  dev.py
src/local/: dev.py
