[project]
name = "beveridge-curve"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Juliette Bornier", email = "juliette.bornier.3110@gmail.com" }
]
dependencies = [
    "pandas>=2.2.0",
    "matplotlib>=3.9.0",
    "dbnomics>=1.2.5",
    "streamlit>=1.36.0",
    "plotly-express",
    "plotly>=5.22.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["ruff"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/beveridge_curve"]
